@@ -7,6 +7,8 @@ class formDefinitions extends eZPersistentObject
 {
     // prefix for keys used in session
     const PAGE_SESSION_PREFIX = 'form_data_page_';
+    // session key set when form was just sent
+    const SESSION_FORM_SENT_KEY = 'form_just_sent';
     // main node id
     const MAIN_NODE_ID = 2;
 
